colcon_ws/log/build_2023-05-28_16-24-05/px4_ros_com/stdout_stderr.log
[35m[1mScanning dependencies of target offboard_control[0m
[ 40%] Built target frame_transforms
[ 40%] Built target sensor_combined_listener
[ 60%] Built target debug_vect_advertiser
[ 80%] Built target vehicle_gps_position_listener
[ 90%] [32mBuilding CXX object CMakeFiles/offboard_control.dir/src/examples/offboard/offboard_control.cpp.o[0m
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp: In member function ‘void OffboardControl::publish_offboard_control_mode()’:
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:140:24: error: ‘class OffboardControl’ has no member named ‘g’
  140 |  msg.timestamp = this->g]: Arm command send
      |                        ^
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:160:46: error: qualified-id in declaration before ‘(’ token
  160 | void OffboardControl::publish_vehicle_command(uint16_t command, float param1, float param2)
      |                                              ^
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:176:1: error: a function-definition is not allowed here before ‘{’ token
  176 | {
      | ^
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:182:1: error: expected ‘}’ at end of input
  182 | }
      | ^
/root/colcon_ws/src/px4_ros_com/src/examples/offboard/offboard_control.cpp:133:1: note: to match this ‘{’
  133 | {
      | ^
make[2]: *** [CMakeFiles/offboard_control.dir/build.make:63: CMakeFiles/offboard_control.dir/src/examples/offboard/offboard_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:113: CMakeFiles/offboard_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
